Fix code horizontal scrolling in Safari

--- a/src/components/Pages/Post/Template/index.module.scss
+++ b/src/components/Pages/Post/Template/index.module.scss
@@ -182,8 +182,9 @@ article h1 {
   }
 
    pre.shiki {
-      overflow-x: auto;
-      overflow-y: visible;
+    overflow-x: auto;
+    overflow-y: visible;
+    overflow-wrap: normal;
   }
 
    pre.shiki:hover .dim {
